--- a/buildspec-kubectl.yml
+++ b/buildspec-kubectl.yml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   variables:
-    _PROJECT_NAME: "team01-bluesquare"
+    _PROJECT_NAME: "team01-bluesqure"
 
 phases:
   install:
