--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,17 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
+           <dependency>
+    		<groupId>org.springframework.cloud</groupId>
+    		<artifactId>spring-cloud-starter-sleuth</artifactId>
+           		 <version>3.0.5</version>
+		</dependency>
+          <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+            <version>3.0.5</version>
+          </dependency>
 
 	<dependencyManagement>
 		<dependencies>
