--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,7 +42,7 @@ server:
 
 spring:
   application:
-    name: bluesquare
+    name: bluesqaure
   profiles: docker
   sleuth:
     propagation-keys: x-request-id,x-ot-span-context
@@ -52,7 +52,7 @@ spring:
     enabled: true
   zipkin:
     #base-url: http://jaeger-collector.default.svc.cluster.local:9411
-    base-url: http://jaeger-collector.istio-system:9411
+    base-url: http://zipkin.istio-system:9411
   cloud:
     stream:
       kafka:
